# copy_lemin

lem-in/: 1000  CMakeLists.txt  a.out  card  lem-in.h  lem-in.h.gch  lem-in_gen  main.c  start.sh
lem-in/checker/: built_int_graph.c  built_int_mas_links.c  checker.c  create_list.c  free_graph.c  record_coord_room.c  record_links.c  work_with_arms.c
lem-in/search_for_ways/: bfs.c  check_repeat_pyth.c  clean_all_memory.c  creat_finish_pyths.c  ft_creat_list_pyth.c  queue.c  work_horse.c
